deploy/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openca-ocspd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openca-ocspd
  namespace: openca-ocspd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openca-ocspd
  template:
    metadata:
      labels:
        app: openca-ocspd
    spec:
      containers:
      - name: openca-ocspd
        image: harbor.demo.cloudnativeapps.cloud/openca-ocspd/openca-ocspd:3.1.3-b2
        ports:
        - name: http
          containerPort: 2560
        volumeMounts:
        - name: ocsp-certs-volume
          readOnly: true
          mountPath: /usr/local/ocspd/etc/ocspd/certs
        - name: crl-volume
          mountPath: /usr/local/ocspd/etc/ocspd/crls
          readOnly: true
        - name: ocsp-key-volume
          readOnly: true
          mountPath: /usr/local/ocspd/etc/ocspd/private
      - name: crl-updater
        image: curlimages/curl:latest
        command:
        - /bin/sh
        - -c
        - |
          while true; do
            /bin/sh /scripts/update-crl.sh
            sleep 2
          done
        volumeMounts:
        - name: crl-volume
          mountPath: /usr/local/ocspd/etc/ocspd/crls
        - name: script-volume
          mountPath: /scripts
      volumes:
      - name: ocsp-certs-volume
        secret:
          secretName: ocsp-certs
          items:
          - key: tls.crt
            path: tls.crt
          - key: ca.crt
            path: ca.crt
      - name: ocsp-key-volume
        secret:
          secretName: ocsp-certs
          items:
          - key: tls.key
            path: tls.key
      - name: crl-volume
        emptyDir: {}
      - name: script-volume
        configMap:
          name: crl-update-script
          defaultMode: 0755
---
kind: Service
apiVersion: v1
metadata:
  name: openca-ocspd
  namespace: openca-ocspd
  labels:
    app: openca-ocspd
spec:
  selector:
    app: openca-ocspd
  ports:
  - name: http
    port: 2560
    targetPort: 2560
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openca-ocspd
  namespace: openca-ocspd
spec:
  ingressClassName: nginx
  rules:
  - host: ocspd.demo.cloudnativeapps.cloud
    http:
      paths:
      - backend:
          service:
            name: openca-ocspd
            port:
              number: 2560
        path: /
        pathType: Prefix
